--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ paramiko = "^3.5.0"
 black = "^24.8.0"
 isort = "^5.13.2"
 pre-commit = "^2.12.0"
+python-dotenv = "^1.0.1"
 
 [tool.black]
 line-length = 88  # Black's default line length
